<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_map"
            android:id="@+id/button3"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_profile"
            android:id="@+id/button2"
            android:singleLine="true"
            android:onClick="load_profile"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_tracking"
            android:id="@+id/button"
            android:onClick="load_tracking"/>
</LinearLayout>