<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fountain_prompt"
            android:id="@+id/prompt"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/radio_group"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/drinkable"
                android:id="@+id/drinkable"
                android:checked="true"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="bottom"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/avoid"
                android:id="@+id/avoid"
                android:layout_weight="1.3"
                android:checked="false"
                android:textSize="20sp"
                android:layout_gravity="left"/>
    </RadioGroup>

    <TextView
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Fountain will be added at your current location"
            android:id="@+id/additional"
            android:layout_gravity="center"/>

</LinearLayout>